[package]
name = "binwalk"
version = "3.1.0"
edition = "2021"
authors = ["Craig Heffner <heffnercj@gmail.com>"]
license = "MIT"
readme = "CARGO_README.md"
repository = "https://github.com/ReFirmLabs/binwalk"
description = "Analyzes data for embedded file types"
keywords = ["binwalk", "firmware", "analysis"]

[dependencies]
log = "0.4.22"
base64 = "0.22.1"
chrono = "0.4.38"
walkdir = "2.5.0"
entropy = "0.4.2"
colored = "2.1.0"
termsize = "0.1"
crc32-v2 = "0.0.4"
crc32c = "0.6.8"
plotters = "0.3.6"
xz2 = "0.1.7"
bzip2 = "0.4.4"
threadpool = "1.8.1"
serde_json = "1.0"
env_logger = "0.11.5"
flate2 = "1.0.34"
aho-corasick = "1.1.3"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.5.16", features = ["derive"] }
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

