[metadata]
name = binwalk
author = Craig Heffner
description = Firmware analysis tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = firmware, binary, analysis, reverse-engineering, signature
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: OSI Approved :: MIT
	Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
python_requires >= 3

#test_suite = tests.tests.Tests
dependency_links = ["git+https://github.com/devttys0/yaffshiv.git"]

[options.extras_require]
plots = matplotlib
x86 = capstone
YAFFS = yaffshiv

[options.entry_points]
console_scripts =
    binwalk = binwalk.__main__:main

[build-system]
requires = ["setuptools", "wheel"]
